# trogonai

./: .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  .mise.toml  A2A_AUTH_CALLOUT_TODO.md  A2A_INFRA_TODO.md  A2A_PLAN.md  A2A_TODO.md  AAUTH_PLAN.md  AGENTS.md  API_KEY.md  CI_CD.md  CRON  CRON-web  DEPLOYMENT.md  Dockerfile.agent  Dockerfile.bot  Dockerfile.chat-bridge-telegram  Dockerfile.discord-agent  Dockerfile.discord-bot  GCP_TODO.md  GENKIT_RESEARCH.md  LICENSE  MCP_GATEWAY_PLAN.md  Makefile  NATS_ARCHITECTURE.md  PENDING_TODO.md  PLAN.md  README.md  SECRET_STORE.md  STREAMING_GUIDE.md  TELEGRAM_IMPLEMENTATION.md  TELEGRAM_SYSTEM.md  TODO.md  TROGON.md  UNDERSTANDING_CONTEXT.md  WASM_TODO.md  WORKING_ITEMS_TODO.md  buf.gen.yaml  (+12 more)
rsworkspace/: .dockerignore  .env.example  .env.local.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEMO.md  Dockerfile  README.md  acp-runner-pr-plan-v2.md  acp-runner-pr-plan.md  clippy.toml  deny.toml  dev-runner.sh  docker-compose.yml  fake_xai_server.py  live_test.py  live_test_features.py  live_tests.py  run-all.sh  slack-app-manifest.yml  smoke_test.sh  smoke_test2.sh  smoke_test3.sh  smoke_test4.sh  smoke_test_ext.py  smoke_test_ext.sh  smoke_test_pr7_live.py  smoke_test_programming.py  smoke_test_programming10.py  smoke_test_programming11.py  smoke_test_programming12.py  smoke_test_programming2.py  smoke_test_programming3.py  smoke_test_programming4.py  smoke_test_programming5.py  smoke_test_programming6.py  smoke_test_programming7.py  smoke_test_programming8.py  (+2 more)
rsworkspace/.cargo/: config.toml
rsworkspace/.trogon/: memory.md
rsworkspace/cli/trogon-decider-test/: Cargo.toml  light.yaml  schedules.yaml
rsworkspace/crates/: AGENTS.md
rsworkspace/crates/a2a-auth-callout/: Cargo.toml
rsworkspace/crates/a2a-bridge/: Cargo.toml  README.md
rsworkspace/crates/a2a-gateway/: Cargo.toml  README.md
rsworkspace/crates/a2a-identity-types/: Cargo.toml
rsworkspace/crates/a2a-nats/: Cargo.toml
rsworkspace/crates/a2a-nats-agent/: Cargo.toml  README.md
rsworkspace/crates/a2a-nats-discovery/: Cargo.toml  README.md
rsworkspace/crates/a2a-nats-http/: Cargo.toml  README.md
rsworkspace/crates/a2a-nats-server/: Cargo.toml  README.md
rsworkspace/crates/a2a-nats-stdio/: Cargo.toml  README.md
rsworkspace/crates/a2a-pack/: Cargo.toml  README.md
rsworkspace/crates/a2a-redaction/: Cargo.toml
rsworkspace/crates/a2a-smoke-test/: Cargo.toml
rsworkspace/crates/acp-agent-llm/: Cargo.toml
rsworkspace/crates/acp-nats/: Cargo.toml
rsworkspace/crates/acp-nats-agent/: Cargo.toml  README.md
rsworkspace/crates/acp-nats-server/: Cargo.toml  README.md
rsworkspace/crates/acp-nats-stdio/: Cargo.toml  README.md
rsworkspace/crates/acp-nats-ws/: Cargo.toml  README.md
rsworkspace/crates/acp-telemetry/: Cargo.toml
rsworkspace/crates/agctl/: Cargo.toml
rsworkspace/crates/ard-catalog/: Cargo.toml
rsworkspace/crates/ard-nats/: Cargo.toml
rsworkspace/crates/ard-registry/: Cargo.toml
rsworkspace/crates/chat-bridge-telegram/: Cargo.toml
rsworkspace/crates/discord-agent/: Cargo.toml
rsworkspace/crates/discord-bot/: Cargo.toml
rsworkspace/crates/discord-nats/: Cargo.toml
rsworkspace/crates/discord-types/: Cargo.toml
rsworkspace/crates/jsonrpc-nats/: Cargo.toml
rsworkspace/crates/llm-anthropic/: Cargo.toml  Dockerfile
rsworkspace/crates/llm-deepseek/: Cargo.toml  Dockerfile
rsworkspace/crates/llm-gemini/: Cargo.toml  Dockerfile
rsworkspace/crates/llm-openai/: Cargo.toml  Dockerfile
rsworkspace/crates/llm-types/: Cargo.toml
rsworkspace/crates/mcp-nats/: Cargo.toml  README.md
rsworkspace/crates/mcp-nats-server/: Cargo.toml  README.md
rsworkspace/crates/mcp-nats-stdio/: Cargo.toml  README.md
rsworkspace/crates/mcp-pack/: Cargo.toml  README.md
rsworkspace/crates/slack-agent/: Cargo.toml  Dockerfile
rsworkspace/crates/slack-bot/: Cargo.toml  Dockerfile
rsworkspace/crates/slack-enricher/: Cargo.toml
rsworkspace/crates/slack-nats/: Cargo.toml
rsworkspace/crates/slack-types/: Cargo.toml
rsworkspace/crates/telegram-agent/: Cargo.toml  README.md
rsworkspace/crates/telegram-bot/: Cargo.toml  FILE_DOWNLOADS.md  README.md  WEBHOOK_SETUP.md
rsworkspace/crates/telegram-nats/: Cargo.toml
rsworkspace/crates/telegram-types/: Cargo.toml
rsworkspace/crates/trogon-a2a-sdk/: Cargo.toml  README.md
rsworkspace/crates/trogon-aauth-as/: Cargo.toml
rsworkspace/crates/trogon-aauth-person/: Cargo.toml
rsworkspace/crates/trogon-aauth-sdk/: Cargo.toml
rsworkspace/crates/trogon-aauth-verify/: Cargo.toml
rsworkspace/crates/trogon-acp/: Cargo.toml  build.rs
rsworkspace/crates/trogon-acp-runner/: Cargo.toml
rsworkspace/crates/trogon-actor/: Cargo.toml
rsworkspace/crates/trogon-agent/: Cargo.toml
rsworkspace/crates/trogon-agent-core/: Cargo.toml
rsworkspace/crates/trogon-agent-registry/: Cargo.toml  README.md
rsworkspace/crates/trogon-agent-registry-controller/: Cargo.toml  README.md
rsworkspace/crates/trogon-automations/: Cargo.toml
rsworkspace/crates/trogon-chat/: Cargo.toml
rsworkspace/crates/trogon-cli/: Cargo.toml
rsworkspace/crates/trogon-cron/: Cargo.toml  (+2 more)
rsworkspace/docs/: bugs.md  cli-launch-guide.md  cli-status.md  cli-substitution-checklist.md  cli-substitution-testing.md  codex-protocol-delta.md  codex-runner-parity-plan.md  compaction-difmodel.md  design-2-http-proxy-nats-jetstream.md  dynamic-agents-implementation-plan.md  foundry-gaps-report.md  gap-c-spawn-agent-plan.md  ide-multi-runner-plan.md  implementation-summary.md  next-priorities.md  openrouter-coding-tools-plan.md  openrouter-integration-pending.md  plan.md  programming-a-plan.md  programming-b-plan.md  programming-imple.md  programming.md  scope-permission-plan.md  secret-management-nats-rotation.md  secrets-management-research.md  semana.md  streaming-implementation-plan.md  tool-approval-gates-plan.md  trigger-validation-and-permanent-failed-observability.md
rsworkspace/research/: ai-agent-infrastructure-2026.md
rsworkspace/scripts/: e2e-fake-runner.sh  e2e-test.sh  pr-check.sh  trogon-dev.sh
(+5244 files in other folders)
