[workspace]
resolver = "2"
members = ["crates/*", "wasm-components/*", "cli/trogon-decider-test"]
default-members = ["crates/*", "cli/trogon-decider-test"]

[workspace.lints.rust]
warnings = "deny"
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(coverage)', 'cfg(dylint_lib, values(any()))'] }

[workspace.lints.clippy]
all = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"

[workspace.dependencies]
# Internal crates
a2a-auth-callout = { path = "crates/a2a-auth-callout" }
a2a-bridge = { path = "crates/a2a-bridge" }
a2a-identity-types = { path = "crates/a2a-identity-types" }
a2a-nats = { path = "crates/a2a-nats" }
a2a-pack = { path = "crates/a2a-pack" }
ard-catalog = { path = "crates/ard-catalog" }
ard-nats = { path = "crates/ard-nats" }
ard-registry = { path = "crates/ard-registry" }
a2a-redaction = { path = "crates/a2a-redaction" }
acp-nats = { path = "crates/acp-nats" }
trogon-telemetry = { path = "crates/trogon-telemetry" }
mcp-nats = { path = "crates/mcp-nats" }
mcp-nats-server = { path = "crates/mcp-nats-server" }
mcp-nats-stdio = { path = "crates/mcp-nats-stdio" }
jsonrpc-nats = { path = "crates/jsonrpc-nats" }
trogon-nats = { path = "crates/trogon-nats" }
trogon-aauth-verify = { path = "crates/trogon-aauth-verify" }
trogon-decider = { path = "crates/trogon-decider" }
trogon-decider-nats = { path = "crates/trogon-decider-nats" }
trogon-decider-wit = { path = "crates/trogon-decider-wit" }
trogon-decider-guest-macros = { path = "crates/trogon-decider-guest-macros" }
trogon-decider-guest-sdk = { path = "crates/trogon-decider-guest-sdk" }
trogon-decider-sim = { path = "crates/trogon-decider-sim" }
trogon-decider-runtime = { path = "crates/trogon-decider-runtime" }
trogon-identity-types = { path = "crates/trogon-identity-types" }
trogon-semconv = { path = "crates/trogon-semconv" }
trogon-service-config = { path = "crates/trogon-service-config" }
trogon-std = { path = "crates/trogon-std" }
trogonai-proto = { path = "crates/trogonai-proto" }

# A2A
a2a = { package = "a2a-lf", version = "=0.3.0" }

# CEL interpreter for Tier-2 declarative policy rules
cel-interpreter = "=0.10.0"

# ACP
agent-client-protocol = { version = "=0.10.4", features = ["unstable_logout"] }

# MCP
rmcp = { version = "2.0.0", default-features = false, features = ["client", "server", "transport-io", "transport-async-rw", "transport-streamable-http-server"] }

# Async runtime & networking
async-compat = "=0.2.5"
async-nats = { version = "=0.49.0", default-features = false }
async-trait = "=0.1.89"
axum = { version = "=0.8.9", features = ["ws"] }
bytes = "=1.11.1"
base64 = "=0.22.1"
buffa = { version = "=0.7.0", features = ["json"] }
buffa-types = { version = "=0.7.0", features = ["json"] }
futures = "=0.3.32"
futures-util = "=0.3.32"
tokio = "=1.52.1"
tokio-util = "=0.7.18"
tokio-tungstenite = "=0.29.0"
tower = "=0.5.3"
tower-http = { version = "=0.6.8", features = ["trace"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "migrate", "postgres", "chrono", "json"] }

# Serialization
confique = { version = "=0.4.0", features = ["toml"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
jsonschema = { version = "=0.46.5", default-features = false }

# CLI
clap = { version = "=4.6.1", features = ["derive"] }

# Observability
opentelemetry = "=0.32.0"
opentelemetry-appender-tracing = "=0.32.0"
opentelemetry-otlp = "=0.32.0"
opentelemetry-semantic-conventions = { version = "=0.32.1", features = ["semconv_experimental"] }
opentelemetry_sdk = "=0.32.1"
tracing = "=0.1.44"
tracing-opentelemetry = "=0.33.0"
tracing-subscriber = "=0.3.23"

# Discord
twilight-gateway = { version = "=0.17.1", default-features = false, features = ["rustls-native-roots"] }
twilight-model = "=0.17.1"

# Error handling
anyhow = "=1.0.102"
thiserror = "=2.0.18"

# SpiceDB / authzed gRPC (feature-gated SpiceDB-backed import gate)
authzed = { package = "spicedb-grpc-tonic", version = "=1.0.0" }
tonic = { version = "=0.14.6", default-features = false, features = ["transport", "codegen", "router"] }
moka = { version = "=0.12.10", features = ["future"] }

# Misc
chrono-tz = "=0.10.4"
ed25519-dalek = { version = "=2.2.0", features = ["std", "rand_core"] }
toml = "=0.8.23"
wasmtime = "=46.0.1"
http = "=1.4.0"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
rrule = "=0.14.0"
sha2 = "=0.10.8"
wiremock = "=0.6.3"
tempfile = "=3.27.0"
filetime = "=0.2.27"
time = "=0.3.47"
url = "=2.5.8"
uuid = { version = "=1.23.1", features = ["v4", "v7"] }
prost-reflect = "=0.14.7"
serde_yaml = "=0.9.34"
wasmtime-wasi = "=46.0.1"
wit-bindgen = "=0.58.0"

# Auth callout
hex = "=0.4.3"
hmac = "=0.12.1"
jsonwebtoken = "=10.3.0"
nats-jwt-rs = "=0.1.1"
nkeys = { version = "=0.4.5", features = ["xkeys"] }
rustls-pemfile = "=2.2.0"
rustls-pki-types = { version = "=1.14.0", default-features = false, features = ["std"] }
rustls-webpki = { version = "=0.103.13", default-features = false, features = ["std", "alloc", "ring"] }
x509-parser = "=0.16.0"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
# Note: panic = "abort" removed because Cargo doesn't support per-package panic overrides.
# Bridge crates use catch_unwind for panic isolation, which requires panic = "unwind".
# All workspace crates will use unwinding in release builds for this reason.
