[package]
name = "trogon-decider-test"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[lib]
name = "trogon_decider_test"
path = "src/lib.rs"

[[bin]]
name = "decider-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
buffa = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
trogon-decider-sim = { workspace = true }
trogonai-proto = { path = "../../crates/platform/trogonai-proto", default-features = false, features = ["schedules"] }
