[package]
name = "a2a-bridge"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "HTTPS ↔ NATS A2A sidecar: caller identity, error surface, and routing scaffolds"
publish = false

[[bin]]
name = "a2a-bridge"
path = "src/main.rs"

[lib]
name = "a2a_bridge"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
a2a-auth-callout = { workspace = true }
a2a-nats = { workspace = true }
async-nats = { workspace = true, features = ["jetstream"] }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { version = "=0.3.23", features = ["fmt", "env-filter"] }

[dev-dependencies]
futures-util = { workspace = true }
nkeys = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trogon-nats = { workspace = true, features = ["test-support"] }
wiremock = { workspace = true }
