[package]
name = "a2a-gateway"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A2A gateway service: ingress on {prefix}.gateway.> with policy-driven forwarding"
publish = false

[lib]
name = "a2a_gateway"
path = "src/lib.rs"

[[bin]]
name = "a2a-gateway"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
a2a-auth-callout = { workspace = true }
a2a-nats = { workspace = true }
a2a-pack = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
jsonwebtoken = { version = "=10.3.0", features = ["rust_crypto"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
trogon-aauth-verify = { workspace = true }
trogon-identity-types = { workspace = true }
trogon-nats = { workspace = true }
trogon-std = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
nkeys = { workspace = true }
p256 = { version = "=0.13.2", features = ["ecdsa", "pkcs8"] }
rand_core = { version = "=0.6.4" }
serde_json = { workspace = true }
sha2 = { workspace = true }
trogon-aauth-verify = { workspace = true }
trogon-std = { workspace = true, features = ["test-support"] }
