[package]
name = "a2a-gateway"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A2A gateway service: ingress on {prefix}.gateway.> with policy-driven forwarding"
publish = false

[lib]
name = "a2a_gateway"
path = "src/lib.rs"

[[bin]]
name = "a2a-gateway"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Enables the SpiceDB-backed Tier-1 gate. Off by default so
# deployments without an external authoriser don't pay the
# authzed/tonic/moka compile cost.
spicedb = ["a2a-nats/spicedb", "dep:async-trait", "dep:authzed", "dep:tonic"]

[dependencies]
a2a = { workspace = true }
async-trait = { workspace = true, optional = true }
authzed = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
a2a-auth-callout = { workspace = true }
a2a-nats = { workspace = true }
a2a-pack = { workspace = true }
a2a-redaction = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
cel-interpreter = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
jsonwebtoken = { version = "=10.3.0", features = ["rust_crypto"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
trogon-aauth-verify = { workspace = true }
trogon-identity-types = { workspace = true }
trogon-nats = { workspace = true }
trogon-std = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
nkeys = { workspace = true }
p256 = { version = "=0.13.2", features = ["ecdsa", "pkcs8"] }
rand_core = { version = "=0.6.4" }
serde_json = { workspace = true }
filetime = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
trogon-aauth-verify = { workspace = true }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-std = { workspace = true, features = ["test-support"] }
