[package]
name = "a2a-identity-types"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Wire-level caller identity types for the A2A protocol"
publish = false

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
