[package]
name = "a2a-nats-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "a2a-nats-agent"
path = "src/main.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"

[lints]
workspace = true

[dependencies]
a2a-nats = { workspace = true }
a2a-types = { workspace = true }
async-nats = { workspace = true, features = ["jetstream"] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
trogon-nats = { workspace = true }
trogon-std = { workspace = true, features = ["signal"] }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-std = { workspace = true, features = ["test-support"] }
uuid = { workspace = true }
