[package]
name = "a2a-nats-discovery"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[[bin]]
name = "a2a-nats-discovery"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
a2a-nats = { workspace = true }
a2a-pack = { workspace = true }
a2a-types = { workspace = true }
async-nats = { workspace = true, features = ["jetstream"] }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
trogon-nats = { workspace = true }
trogon-std = { workspace = true, features = ["signal"] }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-std = { workspace = true, features = ["test-support"] }
