[package]
name = "a2a-nats-server"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish.workspace = true

[[bin]]
name = "a2a-nats-server"
path = "src/main.rs"

[[bin]]
name = "a2a-nats-server-echo"
path = "src/bin/echo.rs"

[lints]
workspace = true

[dependencies]
a2a-nats = { workspace = true }
futures = { workspace = true }
a2a = { workspace = true }
async-nats = { workspace = true, features = ["jetstream"] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
trogon-nats = { workspace = true }
trogon-std = { workspace = true, features = ["signal"] }
uuid = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-std = { workspace = true, features = ["test-support"] }
uuid = { workspace = true }
