[package]
name = "a2a-nats-server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Default A2A-over-NATS agent binary"
publish = false

[[bin]]
name = "a2a-nats-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
a2a = { workspace = true }
a2a-nats = { workspace = true }
async-nats = { workspace = true, features = ["jetstream"] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
trogon-nats = { workspace = true }
trogon-std = { workspace = true, features = ["signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-std = { workspace = true, features = ["test-support"] }
