[package]
name = "a2a-nats-stdio"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "a2a-nats-stdio"
path = "src/main.rs"

[dependencies]
a2a-nats = { workspace = true }
a2a-types = { workspace = true }
async-compat = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "signal"] }
tracing = { workspace = true }
trogon-nats = { workspace = true }
trogon-std = { workspace = true, features = ["signal"] }

[dev-dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-std = { workspace = true, features = ["test-support"] }
