[package]
name = "a2a-nats"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A2A protocol bindings over NATS"
publish = false

[lints]
workspace = true

[dependencies]
a2a = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
trogon-nats = { workspace = true }
uuid = { workspace = true }
