[package]
name = "a2a-nats"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A2A protocol bindings over NATS"
publish = false

[lints]
workspace = true

[dependencies]
a2a = { workspace = true }
a2a-identity-types = { workspace = true }
a2a-pack = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
trogon-nats = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
trogon-nats = { workspace = true, features = ["test-support"] }
