[package]
name = "a2a-pack"
version = "0.0.0-skeleton"
edition = "2024"
license.workspace = true
description = "First-party A2A policy bundle surface (skeleton placeholder)"
publish = false

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
jsonschema = { workspace = true, default-features = false }
jsonwebtoken = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
a2a-redaction = { workspace = true }
